--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,7 +1,9 @@
 .copyright {
+  &__logo {
+    display: none;
+  }
+
   &__text {
-    width: 125px;
-    height: 20px;
     color: $text-black;
     font-size: 19px;
     font-weight: 700;
@@ -9,17 +11,18 @@
   }
 
   &__link {
-    width: 27px;
-    height: 34px;
     background-color: $mint;
   }
 }
 
 @media (min-width: $tablet-width) {
   .copyright {
+    &__logo {
+      width: 102px;
+      height: 34px;
+    }
+
     &__text {
-      width: 125px;
-      height: 20px;
       color: $text-black;
       font-size: 19px;
       font-weight: 700;
@@ -27,8 +30,6 @@
     }
 
     &__link {
-      width: 27px;
-      height: 34px;
       background-color: $mint;
     }
   }
@@ -36,9 +37,12 @@
 
 @media (min-width: $desktop-width) {
   .copyright {
+    &__logo {
+      width: 102px;
+      height: 34px;
+    }
+
     &__text {
-      width: 125px;
-      height: 20px;
       color: $text-black;
       font-size: 19px;
       font-weight: 700;
@@ -46,8 +50,6 @@
     }
 
     &__link {
-      width: 27px;
-      height: 34px;
       background-color: $mint;
     }
   }
