--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -11,7 +11,7 @@
     font-size: 17px;
     font-weight: 700;
     line-height: 1.41;
-    background-image: url("/css/img/icon-video.svg");
+    background-image: url("/img/icon-video.svg");
     background-repeat: no-repeat;
   }
 
