--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -2,21 +2,17 @@
 
   background-color: $white;
 
-  &__img {
-    width: 260px;
-    height: 195px;
+  &__title {
+    display: flex;
+    flex-direction: column;
   }
 
   &__features {
-    width: 260px;
-    height: 179px;
     border: 1px solid $light-gray;
     background-color: $white;
   }
 
   &__title-name {
-    width: 197px;
-    height: 18px;
     color: $text-black;
     font-size: 17px;
     font-weight: 700;
@@ -24,8 +20,6 @@
   }
 
   &__title-description {
-    width: 127px;
-    height: 12px;
     color: $dark-gray;
     font-size: 13px;
     font-weight: 400;
@@ -33,8 +27,6 @@
   }
 
   &__price-rub {
-    width: 74px;
-    height: 16px;
     color: $text-black;
     font-size: 15px;
     font-weight: 700;
@@ -42,8 +34,6 @@
   }
 
   &__price-icon {
-    width: 20px;
-    height: 19px;
     opacity: 0.2;
   }
 }
@@ -53,16 +43,15 @@
     display: flex;
     flex-direction: row;
 
-    &__img {
-      width: 334px;
-      height: 334px;
+    &__title {
+      display: flex;
+      flex-direction: column;
     }
 
     &__features {
       display: flex;
       flex-direction: column;
-      width: 335px;
-      height: 334px;
+      flex-wrap: wrap;
       border: 1px solid $light-gray;
       background-color: $white;
     }
@@ -90,8 +79,6 @@
     }
 
     &__price-icon {
-      width: 21px;
-      height: 18px;
       opacity: 0.2;
     }
   }
@@ -99,18 +86,20 @@
 
 @media (min-width: $desktop-width) {
   .catalog-item {
-    display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 
-    &__img {
-      width: 316px;
-      height: 462px;
+    &__title {
+      display: flex;
+      flex-direction: column;
     }
 
     &__features {
       display: flex;
       flex-direction: column;
-      height: 197px;
+      justify-content: stretch;
+      flex-wrap: wrap;
+      min-height: 197px;
       border: 1px solid $light-gray;
       background-color: $white;
     }
@@ -138,8 +127,6 @@
     }
 
     &__price-icon {
-      width: 21px;
-      height: 18px;
       opacity: 0.2;
     }
   }
