--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,6 +10,9 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color: $white;
   }
 }
