--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -1,20 +1,16 @@
 .category {
   &__item {
-    width: 320px;
-    height: 103px;
     color: $white;
     font-size: 19px;
     font-weight: 700;
     line-height: 1.26;
 
     &--interior {
-      width: 106px;
-      background-image: url("/source/img/icon-interior.svg") no-repeat opacity 0.5;
+      background-image: url("/img/icon-interior.svg") no-repeat opacity 0.5;
     }
 
     &--toys {
-      width: 89px;
-      background-image: url("/source/img/icon-toy.svg") no-repeat opacity 0.5;
+      background-image: url("/img/icon-toy.svg") no-repeat opacity 0.5;
     }
   }
 }
@@ -25,8 +21,6 @@
     flex-direction: row;
 
     &__item {
-      width: 334px;
-      height: 119px;
       color: $white;
       font-size: 20px;
       font-weight: 700;
@@ -34,16 +28,12 @@
 
       &--interior {
         background-color: $mint;
-        width: 111px;
-        height: 50px;
-        background-image: url("/source/img/icon-interior.svg") no-repeat opacity 0.5;
+        background-image: url("/img/icon-interior.svg") no-repeat opacity 0.5;
       }
 
       &--toys {
         background-color: $dark-mint;
-        width: 94px;
-        height: 50px;
-        background-image: url("/source/img/icon-toy.svg") no-repeat opacity 0.5;
+        background-image: url("/img/icon-toy.svg") no-repeat opacity 0.5;
       }
     }
   }
@@ -55,8 +45,6 @@
     flex-direction: row;
 
     &__item {
-      width: 525px;
-      height: 119px;
       color: $white;
       font-size: 20px;
       font-weight: 700;
@@ -64,17 +52,13 @@
 
       &--interior {
         background-color: $mint;
-        width: 111px;
-        background-image: url("/source/img/icon-interior.svg") no-repeat opacity 0.5;
+        background-image: url("/img/icon-interior.svg") no-repeat opacity 0.5;
       }
 
       &--toys {
         background-color: $dark-mint;
-        width: 94px;
-        background-image: url("/source/img/icon-toy.svg") no-repeat opacity 0.5;
+        background-image: url("/img/icon-toy.svg") no-repeat opacity 0.5;
       }
     }
   }
 }
-
-
