--- a/source/sass/blocks/popular-item.scss
+++ b/source/sass/blocks/popular-item.scss
@@ -23,14 +23,14 @@
   &__text {
     width: 249px;
     height: 63px;
-    color: $text-darkgray;
+    color: $dark-gray;
     font-size: 15px;
     font-weight: 400;
     line-height: 1.6;
   }
 
   &__table {
-    color: $text-darkgray;
+    color: $dark-gray;
     font-size: 15px;
     font-weight: 400;
     line-height: 1.33;
@@ -49,12 +49,15 @@
   &__image {
     width: 260px;
     height: 315px;
+    margin-bottom: 16px;
   }
 
   &__price {
+    display: flex;
+    justify-content: center;
     width: 124px;
     height: 17px;
-    color: $text-darkgray;
+    color: $dark-gray;
     font-size: 17px;
     font-weight: 700;
     line-height: 1.41;
@@ -63,16 +66,23 @@
   &__button {
     width: 259px;
     height: 52px;
-    border: 2px solid $text-darkgray;
+    border: 2px solid $dark-gray;
     background-color: $white;
   }
 }
 
 @media (min-width: $tablet-width) {
   .popular-item {
-    display: flex;
-    flex-direction: column;
-    background-color: $white;
+    &__description {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
     &__type {
       width: 420px;
@@ -91,6 +101,12 @@
       font-weight: 700;
       line-height: 1;
       text-transform: uppercase;
+    }
+
+    &__description-inner {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
     }
 
     &__text {
@@ -122,6 +138,15 @@
     &__image {
       width: 333px;
       height: 404px;
+      padding-bottom: 0;
+      order: 3;
+    }
+
+    &__footer {
+      width: 336px;
+      height: 114px;
+      margin-top: auto;
+      order: 2;
     }
 
     &__price {
@@ -152,6 +177,13 @@
     display: flex;
     flex-direction: column;
     background-color: $white;
+    width: 1048px;
+
+    &__header {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
 
     &__type {
       width: 515px;
@@ -160,6 +192,7 @@
       font-size: 53px;
       font-weight: 700;
       line-height: 1.08;
+      order: 2;
     }
 
     &__title {
@@ -170,6 +203,7 @@
       font-weight: 700;
       line-height: 1;
       text-transform: uppercase;
+      order: 1;
     }
 
     &__text {
