--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,4 +1,6 @@
 .reviews {
+  position: relative;
+
   &__title {
     width: 105px;
     height: 20px;
@@ -18,8 +20,13 @@
 
 @media (min-width: $tablet-width) {
   .reviews {
+    position: relative;
     display: flex;
     flex-direction: row;
+
+    &__items-wrapper {
+      width: 100%;
+    }
 
     &__title {
       width: 179px;
@@ -28,6 +35,7 @@
       font-size: 43px;
       font-weight: 700;
       line-height: 1.16;
+      order: -2;
     }
 
     &__create {
@@ -40,15 +48,21 @@
       font-weight: 700;
       line-height: 1.18;
       text-transform: uppercase;
+      order: -1;
     }
   }
 }
 
 @media (min-width: $desktop-width) {
   .reviews {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    &__items-wrapper {
+      width: 100%;
+    }
 
     &__title {
       width: 218px;
@@ -57,6 +71,7 @@
       font-size: 53px;
       font-weight: 700;
       line-height: 1.08;
+      order: -2;
     }
 
     &__create {
@@ -69,6 +84,7 @@
       font-weight: 700;
       line-height: 1.18;
       text-transform: uppercase;
+      order: -1;
     }
   }
 }
