--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,27 +1,23 @@
 .slider {
   background-color: $white;
 
-  &__arrow {
-    width: 260px;
-    height: 52px;
-    border: 1px solid $light-gray;
-    background-color: $white;
-
-    &--previous {
-      width: 50px;
-      height: 26px;
-    }
-
-    &--next {
-      width: 50px;
-      height: 26px;
+  &__item {
+    &--prev {
+      display: none;
     }
   }
-}
 
-@media (min-width: $tablet-width) {
-  .slider {
+  &__navigation {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
     &__arrow {
+      width: 260px;
+      height: 52px;
+      border: 1px solid $light-gray;
+      background-color: $white;
+
       &--previous {
         width: 50px;
         height: 26px;
@@ -30,6 +26,32 @@
       &--next {
         width: 50px;
         height: 26px;
+      }
+    }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .slider {
+    &__item {
+      flex-direction: column;
+    }
+
+    &__navigation {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+
+      &__arrow {
+        &--previous {
+          width: 50px;
+          height: 26px;
+        }
+
+        &--next {
+          width: 50px;
+          height: 26px;
+        }
       }
     }
   }
@@ -37,15 +59,25 @@
 
 @media (min-width: $desktop-width) {
   .slider {
-    &__arrow {
-      &--previous {
-        width: 50px;
-        height: 26px;
-      }
+    &__item {
+      flex-direction: column;
+    }
 
-      &--next {
-        width: 50px;
-        height: 26px;
+    &__navigation {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+
+      &__arrow {
+        &--previous {
+          width: 50px;
+          height: 26px;
+        }
+
+        &--next {
+          width: 50px;
+          height: 26px;
+        }
       }
     }
   }
