--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,15 +3,15 @@
     background-repeat: no-repeat;
 
     &--instagram {
-      background-image: url("/source/img/icon-insta.svg");
+      background-image: url("/img/icon-insta.svg");
     }
 
     &--fb {
-      background-image: url("/source/img/icon-fb.svg");
+      background-image: url("/img/icon-fb.svg");
     }
 
     &--twitter {
-      background-image: url("/source/img/icon-twitter.svg");
+      background-image: url("/img/icon-twitter.svg");
     }
   }
 }
@@ -26,19 +26,19 @@
       &--instagram {
         width: 22px;
         height: 21px;
-        background-image: url("/source/img/icon-insta.svg");
+        background-image: url("/img/icon-insta.svg");
       }
 
       &--fb {
         width: 15px;
         height: 29px;
-        background-image: url("/source/img/icon-fb.svg");
+        background-image: url("/img/icon-fb.svg");
       }
 
       &--twitter {
         width: 24px;
         height: 20px;
-        background-image: url("/source/img/icon-twitter.svg");
+        background-image: url("/img/icon-twitter.svg");
       }
     }
   }
@@ -54,19 +54,19 @@
       &--instagram {
         width: 22px;
         height: 21px;
-        background-image: url("/source/img/icon-insta.svg");
+        background-image: url("/img/icon-insta.svg");
       }
 
       &--fb {
         width: 15px;
         height: 29px;
-        background-image: url("/source/img/icon-fb.svg");
+        background-image: url("/img/icon-fb.svg");
       }
 
       &--twitter {
         width: 24px;
         height: 20px;
-        background-image: url("/source/img/icon-twitter.svg");
+        background-image: url("/img/icon-twitter.svg");
       }
     }
   }
